--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ textarea {
 .time-block {
   text-align: center;
   border-radius: 15px;
+  width: 100%;
 }
 
 .row {
@@ -68,4 +69,14 @@ textarea {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+.time-block input {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+.container-fluid .row {
+  height: auto;
 }
